[Fix] Fix broken tests.